[package]
name = "cli_select"
version = "0.1.4"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Preyde/cli_select/"
authors = ["Pascal Frank"]
description = "A crate build on top of crossterm to provide a simple customizable select dialog for the command line."
license = "MIT"
keywords = ["cli", "select", "box", "select-box", "dialog", "select-dialog", "cli-select", "cli_select", "radiobutton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"